--- a/_posts/2024-06-01-Startup.md
+++ b/_posts/2024-06-01-Startup.md
@@ -1,13 +1,13 @@
 ---
 layout: "single_post"
-title: "School console redesign"
+title: "Startup survival story"
 description: "Start-ups aren’t for everyone. They are fast-paced and require many compromises. I ran out of wardrobe space for all the hats I was wearing. This is a story of how I adapted to start-up culture."
-tag: "Case study"
-permalink: /portfolio/admin-console
-image: Admin-console/hero.webp
-posted: 0
+tag: "Experience"
+permalink: /log/startups
+image: 
+posted: 1
 ---
-
+<!-- 
 <div class="overview-width highlighted project-overview">
   <div class="overview-item">
   <h4>COMPANY</h4>
@@ -37,8 +37,8 @@ posted: 0
   </ul>
   </p>
   </div>
-</div>
-
+</div> -->
+<h2>Welcome Anna</h2>
 <p>
 After three years in consulting, where I worked with clients such as government, banks, and universities, I was pretty skilled in "business-pleasing". The team would gather requirements, deliver them according to the business’ preferences, and move on to the next project. </p>
 
@@ -114,7 +114,7 @@ Adapting to the iterative approach to design was not easy. Instinctually I wante
 <p> To inform the entire company about our progress, I made weekly <a href="{{site.baseurl}}/2024/05/25/Fresh-off-the-code.html" target="_blank">Product update videos</a>. </p>
 
 
-<p>These were some of the designs I created during my time at SkoolBag: </p>
+<!-- <p>These were some of the designs I created during my time at SkoolBag: </p>
 
 <figure>
 <img src="{{site.baseurl}}/assets/uploads/Admin-console/profile.webp" width= "780px" alt="Admin console">
@@ -135,7 +135,7 @@ Adapting to the iterative approach to design was not easy. Instinctually I wante
 <figure>
 <img src="{{site.baseurl}}/assets/uploads/Admin-console/dashboard.webp" width= "780px" alt="Admin console">
   <figcaption>Dashboard <a href="https://www.figma.com/design/axafjXhpcS0ogkUSv4OBKk/Admin-Console?node-id=26202-167609&t=4ifFJ9LVijMhwM9b-1" target="_blank">Figma link </a></figcaption>
-</figure>
+</figure> -->
 
 
 <h2>Shifting mindset </h2>
