--- a/_posts/2024-06-01-Startup.md
+++ b/_posts/2024-06-01-Startup.md
@@ -1,8 +1,8 @@
 ---
 layout: "single_post"
-title: "Startup survival story"
+title: "Startup life. Death of perfect"
 description: "Start-ups aren’t for everyone. They are fast-paced and require many compromises. I ran out of wardrobe space for all the hats I was wearing. This is a story of how I adapted to start-up culture."
-tag: "Experience"
+tag: "Growth"
 permalink: /blog/startup
 image: 
 posted: 1
@@ -143,5 +143,5 @@ Adapting to the iterative approach to design was not easy. Instinctually I wante
 
 <div class="callout idea">A growth mindset is the opposite of perfectionism.</div>
 
-<p>Releasing features that aren’t perfect can be tough. There is a fear of negative feedback, damage to reputation, and customer churn. </p>
+<p>Releasing features that aren’t perfect can be tough. There is a fear of negative feedback, damage to reputation and customer churn. </p>
 <p class="last-step">While some customers churned, and others complained, the majority were surprisingly supportive. I learned to remind myself that as a designer, I’m wired to seek out imperfections to fix, while my users just want to send that message to parents and move on with their day.  </p>
